matomo/matomo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  namespace: frontoffice
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - matomo.dev-1.eosc.athenarc.gr
      secretName: matomo-tls
  rules:
    - host: matomo.dev-1.eosc.athenarc.gr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
